# forecasting-agricultural-futures-using-satellite-derived-data

./: pyproject.toml  requirements.txt
data/processed/: corn_continuous_outright.csv
notebooks/: 01_testing.ipynb  requirements.txt  sarima_model.ipynb
notebooks/.ipynb_checkpoints/: 01_testing-checkpoint.ipynb
report/: main.tex
src/: mosaic_processing.py
src/fafusi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: mosaic_processing.py
